css/parser/tests/errors/rome/invalid/keyfram-number/output.stderr
error: Invalid keyframe selector
 --> $DIR/tests/errors/rome/invalid/keyfram-number/input.css:2:2
  |
2 |     10 {
  |     ^^

